clusters/junon/apps/nginx/overlays/preprod/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx
  namespace: nginx-preprod
spec:
  parentRefs:
    - name: web
      namespace: traefik
  hostnames:
    - nginx-preprod.junon.idarius.net
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: nginx
      port: 80
